<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GENERAL -->
    <string name="app_name">BugsControl</string>
    <string name="action_settings">Settings</string>
    <string name="no_items">No hay elementos.</string>
    <string name="invalid_product">Producto inválido.</string>
    <string name="invalid_bug">Bug inválido.</string>

    <!-- REGISTER -->
    <string name="server_name">Nombre del servidor</string>
    <string name="url">URL</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="manage_servers">Gestionar servidores</string>
    <string name="add_server">Añadir servidor</string>
    <string name="edit_server">Editar servidor</string>
    <string name="name_cant_be_empty">El nombre no puede estar vacio</string>
    <string name="server_with_that_name_exists">Ya hay un servidor con ese nombre</string>
    <string name="url_cant_be_empty">La URL no puede estar vacia</string>
    <string name="delete_server_title">Eliminar servidor &lt;b>%1$s&lt;/b></string>
    <string name="delete_server_description">Se borrará el servidor &lt;b>%1$s&lt;/b> y cualquier configuración asociada.</string>

    <!-- INFO -->
    <string name="reporter">Creador</string>
    <string name="assignee">Responsable</string>
    <string name="author">Autor</string>

</resources>
